add starter logo screenshot, playing with naming

--- a/html/wp-content/themes/taco-theme/style.css
+++ b/html/wp-content/themes/taco-theme/style.css
@@ -1,6 +1,6 @@
 /*
-Theme Name: App
-Author: Vermilion
-Author URI: http://vermilion.com/
+Theme Name: Taco Theme
+Author: Taco and Vermilion
+Author URI: https://github.com/tacowordpress
 Version: 1.0
 */
