--- a/html/wp-content/themes/taco-theme/_/scss/_mixins.scss
+++ b/html/wp-content/themes/taco-theme/_/scss/_mixins.scss
@@ -1,10 +1,10 @@
+// css3 mixins
 @mixin border_radius($value) {
   -webkit-border-radius: $value;
   -moz-border-radius: $value;
   border-radius: $value;
 }
 
-// good for vertical align middling
 @mixin translate($value) {
   -webkit-transform: $value;
   -moz-transform: $value;
@@ -39,27 +39,33 @@
   box-shadow: $value;
 }
 
-@mixin cube_grow_bottom_left($left, $top) {
-  box-shadow:
--1px 0px 1px $left,
-0px 1px 1px $top,
--2px 1px 1px $left,
--1px 2px 1px $top,
--3px 2px 1px $left,
--2px 3px 1px $top,
--4px 3px 1px $left,
--3px 4px 1px $top,
--5px 4px 1px $left,
--4px 5px 1px $top,
--6px 5px 1px $left,
--5px 6px 1px $top,
--7px 6px 1px $left,
--6px 7px 1px $top,
--8px 7px 1px $left,
--7px 8px 1px $top,
--9px 8px 1px $left,
--8px 9px 1px $top,
--10px 9px 1px $left,
--9px 10px 1px $top;
+// utility mixins
+@mixin clearfix {
+  &:after {
+    clear: both;
+    content: "";
+    display: table;
+  }
 }
-
+@mixin pseudo_element {
+  position: absolute;
+  content: "";
+  display: block;
+}
+@mixin visually_hidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+@mixin img_replace {
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+  font-size: 1px;
+  opacity: 0;
+}
