--- a/html/wp-content/themes/taco-theme/_/scss/_theme.scss
+++ b/html/wp-content/themes/taco-theme/_/scss/_theme.scss
@@ -1,3 +1,69 @@
 body {
   background: yellow;
 }
+
+/* ===== sticky footer ===== */
+html, body {
+  height: 100%;
+}
+.page-wrap {
+  min-height: 80%;
+  overflow-y: visible;
+  overflow-x: hidden;
+  /* equal to footer height */
+  margin-bottom: -1px;
+}
+.page-wrap:after {
+  content: "";
+  display: block;
+}
+.bottom-edge, .page-wrap:after {
+  height: 1px;
+  line-height: 1px;
+  font-size: 1px;
+}
+
+/* ===== utility classes ===== */
+
+.center {
+  text-align: center;
+}
+
+.table {
+  display: table;
+  .cell {
+    display: table-cell;
+  }
+}
+
+// all wysiwyg's get a parent div.content
+div:not(.content) > ul,
+div:not(.content) > ol,
+nav ul,
+footer ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+// ===== wordpress image styles ===== //
+img.alignleft {
+  float: left;
+  margin-right: 28px;
+  margin-bottom: 18px;
+}
+img.alignright {
+  float: right;
+  margin-left: 28px;
+  margin-bottom: 18px;
+}
+img.aligncenter {
+  display: block;
+  margin: 0 auto 18px;
+}
+img.aligncenter:after {
+  clear: both;
+}
+.gallery-caption {
+  padding: 0 24px;
+}
