--- a/html/wp-content/themes/taco-theme/_/scss/_mixins.scss
+++ b/html/wp-content/themes/taco-theme/_/scss/_mixins.scss
@@ -1,3 +1,4 @@
+// css3
 @mixin border_radius($value) {
   -webkit-border-radius: $value;
   -moz-border-radius: $value;
@@ -37,4 +38,41 @@
   -moz-box-shadow: $value;
   -webkit-box-shadow: $value;
   box-shadow: $value;
+}
+
+// utility
+@mixin clearfix {
+  &:after {
+    display: table;
+    clear: both;
+    content: "";
+  }
+}
+@mixin pseudo_element {
+  position: absolute;
+  content: "";
+  display: block;
+}
+@mixin visually_hidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+@mixin img_replace {
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+  font-size: 1px;
+  opacity: 0;
+}
+@mixin self_placeholder {
+  &::-webkit-input-placeholder { @content }
+  &::-moz-placeholder          { @content }
+  &:-moz-placeholder           { @content }
+  &:-ms-input-placeholder      { @content }
 }
