--- a/html/wp-content/themes/taco-theme/_/scss/_theme.scss
+++ b/html/wp-content/themes/taco-theme/_/scss/_theme.scss
@@ -22,6 +22,13 @@ html, body {
   line-height: 1px;
   font-size: 1px;
 }
+.bottom-edge {
+  height: 1px;
+  line-height: 1px;
+  font-size: 1px;
+  content: "";
+  display: block;
+}
 
 /* ===== utility classes ===== */
 
